changed BG to dark mode, fixed resume link and other updates

--- a/_sass/_basic.scss
+++ b/_sass/_basic.scss
@@ -113,12 +113,13 @@ body.loading {
 
 	svg {
 		position: absolute;
-		top: 50%;
-		left: 50%;
-		width: 20px;
-		height: 20px;
+		top: -40px;
+		right: 237px;
+		width: 1440px;
+		height: 863px;
 		@include translate(-50%,-50%);
-		fill: #fff;
+		// fill: #fff;
+		opacity: 0.5; /* 50% transparency */
 
 		@include mq(tabletp) {
 			width: 30px;
@@ -214,4 +215,47 @@ textarea {
 
 .margin-bottom{
 	margin-bottom: 20px;
+}
+
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Chips
+.chips {
+	display: flex;
+	padding: 16px 38px;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	border-radius: 40px;
+	border: 2px solid var(--Accent-color-1, #4C60E6);
+	background: rgba(31, 41, 55, 0.40);
+	box-shadow: 2px 2px 10px 0px rgba(255, 255, 255, 0.10);
+	color: #E5E7EB;
+	font-family: Rubik;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	text-transform: uppercase;
+}
+
+.chips:hover{
+	display: flex;
+	padding: 16px 38px;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	border-radius: 40px;
+	border: 2px solid #4C60E6;
+	background: rgba(55, 74, 100, 0.40);
+	box-shadow: 2px 2px 10px 0px rgba(255, 255, 255, 0.15);
+}
+
+.chips-list {
+	display: flex;
+	width: 1134px;
+	padding: 10px 0px 80px 0px;
+	align-items: flex-start;
+	align-content: flex-start;
+	gap: 15px;
+	flex-wrap: wrap;
 }
