--- a/_sass/_includes/_section__hero.scss
+++ b/_sass/_includes/_section__hero.scss
@@ -60,7 +60,7 @@
 .hero__background {
 	display: block;
 	position: absolute;
-	top: 0px;
+	top: -1000px;
 	left: 50%;
 	transform: translateX(-50%);
 	z-index: -1;
